# terminus-cli

./: .env.sample  .gitignore  README.md  agent.py  constants.py  main.py  pyproject.toml  session_manager.py  utils.py
llm_service/: base_class.py  groq.py  openrouter.py  service.py
models/: llm.py  tool.py
prompt_manager/: system_prompt.py
prompts/: __init__.py  manager.py  system_prompt.py
src/: __init__.py  agent.py  main.py  session_manager.py  utils.py
src/llm_service/: base_class.py  groq.py  openrouter.py  service.py
src/models/: llm.py
src/prompts/: compaction_prompt.py  coordinator_prompt.py  init_prompt.py  manager.py  planner_prompt.py  sub_agent.py  system_prompt.py
src/tools/: __init__.py  cmd_executor.py  create_file.py  edit_file.py  grep.py  lint.py  ls.py  multi_edit.py  read_file.py  read_multiple_files.py  sandbox.py  send_notification.py  spawn_worker.py  subagent.py  todo.py  tool_registry.py  web_search.py
tools/: __init__.py  cmd_executor.py  create_file.py  edit_file.py  grep.py  lint.py  ls.py  read_file.py  read_multiple_files.py  subagent.py  todo.py  tool_registry.py
ui/: __init__.py  completer.py  frontend.py
ui/react/: README.md  package-lock.json  package.json  tsconfig.json
ui/react/src/: App.tsx  layout.test.ts  main.tsx  protocol.test.ts  protocol.ts  socket-client.ts  state.test.ts  state.ts  theme.ts
ui/react/src/bridge/: protocol.ts  socketClient.ts  state.ts
ui/react/src/components/: ApiKeyInput.tsx  Banner.tsx  Hello.tsx  InputBox.tsx  Logo.tsx  Markdown.tsx  MessageList.tsx  ModelSelect.tsx  ProviderSelect.tsx  StatusBar.tsx  ToolCall.tsx
ui/react/src/helpers/: format.ts  inputHelpers.ts
ui/react/src/hooks/: useBridge.ts
